@@ -3,6 +3,7 @@ Changes
 
 0.8.9
 
+* fix for new word2vec binary format (darenr)
 * doc rendering fix (Dan Foreman-Mackey)
 * better LDA perplexity logging
 * fix Pyro thread leak in distributed algos (Brian Feeny)
